tests/baselines/reference/recursiveNamedLambdaCall.errors.txt
tests/cases/compiler/recursiveNamedLambdaCall.ts(3,8): error TS2304: Cannot find name 'top'.
tests/cases/compiler/recursiveNamedLambdaCall.ts(3,15): error TS2304: Cannot find name 'top'.
tests/cases/compiler/recursiveNamedLambdaCall.ts(7,6): error TS7027: Unreachable code detected.
tests/cases/compiler/recursiveNamedLambdaCall.ts(8,7): error TS2304: Cannot find name 'top'.
tests/cases/compiler/recursiveNamedLambdaCall.ts(10,14): error TS2304: Cannot find name 'setTimeout'.
tests/cases/compiler/recursiveNamedLambdaCall.ts(14,6): error TS2304: Cannot find name 'detach'.


==== tests/cases/compiler/recursiveNamedLambdaCall.ts (6 errors) ====
    var promise = function( obj ) {
    	
    		if ( top && top.doScroll ) {
    		     ~~~
!!! error TS2304: Cannot find name 'top'.
    		            ~~~
!!! error TS2304: Cannot find name 'top'.
    			(function doScrollCheck() {
    				if ( false ) {
    
    					try {
    					~~~
!!! error TS7027: Unreachable code detected.
    						top.doScroll("left");
    						~~~
!!! error TS2304: Cannot find name 'top'.
    					} catch(e) {
    						return setTimeout( doScrollCheck, 50 );
    						       ~~~~~~~~~~
!!! error TS2304: Cannot find name 'setTimeout'.
    					}
    
    					// detach all dom ready events
    					detach();
    					~~~~~~
!!! error TS2304: Cannot find name 'detach'.
    
    				}
    			})();
    		}
    };